<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutsHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ConferenceCallActivity">


            <LinearLayout
                android:id="@+id/local_views_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <org.webrtc.SurfaceViewRenderer
                    android:id="@+id/local_gl_surface_view_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_weight="0.5" />

                <org.webrtc.SurfaceViewRenderer
                    android:id="@+id/local_gl_surface_view_zoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_weight="0.5" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_end_call"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:text="@string/act_call_btn_hang_up" />

            <LinearLayout
                android:id="@+id/live_stream_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/iV_peer_connected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_cast_connected_black_24dp"
                    android:visibility="invisible"
                    android:contentDescription="@string/default_image_desc" />

                <TextView
                    android:id="@+id/tV_peer_connected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/live_stream_text"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>